# dog-food-audit-backend

./: .gitignore  Dockerfile  LOCAL_DEVELOPMENT.md  RAILWAY_DEPLOYMENT.md  README.md  SCRAPING_APPROACHES.md  aaa.html  alembic.ini  docker-compose.yml  env.example  pyproject.toml  render.yaml  requirements.txt  start_local_dev.bat  tatus --porcelain
alembic/: env.py
alembic/versions/: c2cd33aa6f6a_add_user_table_for_authentication.py  c53145a0854f_initial_migration.py
app/: __init__.py  main.py  main_local.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  categories.py  products.py  score.py  scraping.py  users.py
app/core/: config.py  database.py  dependencies.py  logging.py
app/models/: __init__.py  dog_food.py  user.py
app/schemas/: __init__.py  auth.py  dog_food.py
app/scrapers/: __init__.py  base.py  chewy_playwright_rotating.py  chewy_scraper.py  dog_food_scraper.py  robots.txt
app/services/: __init__.py  auth_service.py  category_classification_service.py  dog_food_service.py  food_scoring_engine.py  guaranteed_detection_service.py  ingredient_classification_service.py  nutritional_detection_service.py  processing_detection_service.py  recommend_products.py  scoring_system_service.py  scraping_service.py  services_openai.py  sourcing_detection_service.py
app/tasks/: __init__.py  scraping_tasks.py  task_factory.py
scripts/: init_db.py  run_scraping.py  setup_local_dev.py  start_dev.bat  start_dev.sh
